# AR_Marker-Voxel-Carving

./: .gitignore  ARVoxelCarving.cpp  CMakeLists.txt  PointsObjectCoord.h  README.md  backgroud_subtraction.cpp  marker_generation.cpp  marker_recognition.cpp  marker_recognition_img.cpp  pose_estimation.cpp  utils.cpp  utils.h
camera_calibration/: default.xml  out_camera_data.xml
images/bosebag/: out_camera_data.xml
images/final_db/: out_camera_data.xml
pose_estimation/: pose_estimation.cpp
